--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,7 @@ html, body {
 body {
 	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -33,14 +33,14 @@ input, button, select, textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
+	padding: 0.1em 0.2em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
+	border: 1px solid #ccc;	
 }
 
 input:disabled {
+	font-size: 16px;	
 	color: #ccc;
 }
 
@@ -60,4 +60,14 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+.toolbar__navigation-items a {
+    color:white;
+    text-decoration: none;
+}
+
+.toolbar__navigation-items a:hover,
+.toolbar__navigation-items a:active {
+    color: #1fa7b2;
 }
