--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,25 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+* {
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+}
+
+ .select * {
+	-webkit-touch-callout: text; 
+		-webkit-user-select: text; 
+		-khtml-user-select: text; 
+		-moz-user-select: text; 
+			-ms-user-select: text; 
+				user-select: text; 
+}
+
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
