--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
     --lightest-blue: #d9ecf0;
     --lighter-blue: #b4dee5;
     --blue: #558c9f;
-    --dark-blue: #1b4b5c;
+    --dark-blue: #12565c;
     /*lightest_cold_green: "#d9efe5",
     lighter_cold_green: "#b5e4d5",
     cold_green: "#579c8e",
